--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 }
 
 .article {
-    width: 80%;
+    width: 100%;
     margin-left: 10px;
     margin-bottom: 20px;
 }
@@ -141,6 +141,9 @@
 /* Estilos para sola una imagen */
 .imagen {
     padding: 20px;
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
 }
 
 .imagen img{
@@ -156,7 +159,7 @@
 }
 
 .actions img {
-    padding: 5px;
+    width: 30px;
 }
 
 .actions img:hover {
