--- a/styles.css
+++ b/styles.css
@@ -1,206 +1,244 @@
 /* Estilos generales */
+
 .links {
-    color: #000000;
+  color: #000000;
+}
+
+h1 {
+  font-size: 6em;
 }
 
 /* Estilos para la cabecera de la pagina */
+
 .header {
-    width: 100%;
-    display: flex;
-    background-color: #009DF5;
+  width: 100%;
+  display: flex;
+  background-color: #009DF5;
 }
 
 .logotipo {
-    width: 20%;
-    min-width: 100px;
-    max-width: 200px;
+  width: 20%;
+  min-width: 100px;
+  max-width: 200px;
 }
+
 .logo {
-    width: 100%;
+  width: 100%;
 }
 
 .title {
-    width: 30%;
+  width: 60%;
+  padding-left: 1em;
+  margin: auto;
 }
 
 .options {
-    width: 50%;
-    text-align: right;
-    padding-right: 10px;
-    margin: auto;
+  /* text-align: right; */
+  padding-right: 10px;
+  margin: auto;
 }
 
 /* Estilos para la barra de navegacion */
-.left-nav {
-    width: 20%;
-    background-color: #009DF5;
-    min-width: 100px;
-    max-width: 200px;
+
+.my-nav {
+  width: 20%;
+  background-color: #009DF5;
+  /* min-width: 100px; */
+  /* max-width: 200px; */
 }
 
-.left-nav ul {
-    list-style-type: none;
-    padding-left: 5px;
+.nav-item a {
+  color: #000000;
 }
 
 /* Estilos para el cuerpo de la pagina */
+
 .body {
-    width: 100%;
-    display: inline-flex;
+  width: 100%;
+  display: inline-flex;
 }
 
 .article {
-    width: 80%;
-    margin-left: 10px;
-    margin-bottom: 20px;
+  width: 80%;
+  margin-bottom: 20px;
 }
 
-.row {
-    width: 100%;
-    display: inline-flex;
-}
-
-.col-1x1 {
-    width: auto;
-    display: inline-block;
-    border: solid;
-}
-
-.col-2x2 {
-    display: inline-block;
-    border: solid;
-}
-
-.col-1x1 img {
-    width: 100%;
-    height: auto;
+img {
+  width: 100%;
+  height: auto;
 }
 
 .col-2x2 img {
-    width: 200px;
-    height: auto;
+  width: 200px;
+  height: auto;
 }
 
 .footer {
-    width: 100%;
-    text-align: center;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    background-color: #0079BD;
+  width: 100%;
+  text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #0079BD;
 }
 
 /* Estilos paginacion */
-.pagination {
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    margin-top: 20px;
+
+.paginationn {
+  display: inline-flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-.pagination a {
-    color: black;
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-}
-  
-.pagination a.active {
-    background-color: #009DF5;
-    color: white;
+.paginationn a {
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
 }
 
-.pagination a:hover:not(.active) {
-    background-color: #ddd;
+.paginationn a.active {
+  background-color: #009DF5;
+  color: white;
+}
+
+.paginationn a:hover:not(.active) {
+  background-color: #ddd;
 }
 
 /* Estilos ver perfil */
+
 .col-30 {
-    width: 30%;
+  width: 30%;
 }
 
 .col-50 {
-    width: 50%;
+  width: 50%;
 }
 
 .col-20 {
-    width: 20%;
-    display: inline-block;
+  width: 20%;
+  display: inline-block;
 }
 
 .profile {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .upload, .previous, .next {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Estilos para sola una imagen */
+
 .imagen {
-    padding: 20px;
+  padding: 20px;
 }
 
-.imagen img{
-    width: 100%;
-    height: auto;
-    border: solid;
+.imagen img {
+  width: 100%;
+  height: auto;
+  border: solid;
 }
 
 .actions {
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
+  display: inline-flex;
+  width: 100%;
+  justify-content: center;
 }
 
 .actions img {
-    padding: 5px;
+  padding: 5px;
+  width: 40px;
 }
 
 .actions img:hover {
-    background-color: #009DF5;
+  background-color: #009DF5;
 }
 
 /* Estilos para el formulario de login */
 
-.formlogin{
-    width: 60%;
-    max-width: 500px;
-    margin: auto;
-    background: rgba(0,0,0,0.4);
-    padding: 30px;
-    box-sizing: border-box;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-radius: 7px;
+.formlogin {
+  width: 60%;
+  max-width: 48.75em;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 30px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 7px;
 }
 
-.formlogin h2{
-    text-align: center;
+.formlogin h2 {
+  text-align: center;
 }
 
-.formlogin input{
-    display: block;
-    padding-top: 5px;
+.formlogin input {
+  display: block;
+  padding-top: 5px;
+  width: 100%;
+  margin: 5px 0 20px 0;
+  font-size: 20px;
+}
+
+.formlogin input[type="submit"] {
+  width: 50%;
+  background: #0079BD;
+  color: #fff;
+  border: 0;
+  opacity: 0.8;
+  cursor: pointer;
+  border-radius: 20px;
+  margin: auto;
+  margin-top: 30px;
+}
+
+.formlogin input[type="submit"]:hover {
+  opacity: 1;
+}
+
+/*
+@media screen and (min-width: 64em) {
+  .my-nav {
     width: 100%;
-    margin: 5px 0 20px 0;
-    font-size: 20px;
+  }
+
+  .body {
+    display: block;
+  }
+
+  .left-nav li {
+    float: left;
+    display: inline;
+  }
+
+  .left-nav li a {
+    display: block;
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 }
 
-.formlogin input[type="submit"]{
-    width: 50%;
-    background: #0079BD;
-    color: #fff;
-    border: 0;
-    opacity: 0.8;
-    cursor: pointer;
-    border-radius: 20px;
-    margin: auto;
-    margin-top: 30px;
+@media screen and (min-width: 48.75em) {
+  h1 {
+    font-size: 2em;
+  }
+  .left-nav {
+    display: none;
+  }
+  .formlogin {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .article {
+    margin-bottom: 0;
+  }
 }
-
-.formlogin input[type="submit"]:hover{
-    opacity: 1;
-}
+}*/
