--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,75 @@
 /* Estilos generales */
-.links {
-  color: #000000;
+.web_name {
+  font-size: 6vw;
 }
 
-h1 {
-  font-size: 6em;
+h2 {
+  font-size: 3vw;
+}
+a, p {
+  font-size: 1rem;
+}
+
+span {
+  color: #c71010;
+}
+
+.nolinks {
+  color: #000000;
 }
 
 .menu-hidden {
   display: none;
 }
-/* Estilos para la cabecera de la pagina */
 
-.header {
+#movil_search {
+  display: none;
   width: 100%;
-  display: flex;
-  background-color: #009DF5;
+}
+#movil_search input{
+  width: 100%;
 }
 
-.logotipo {
-  width: 20%;
-  /* min-width: 100px; */
-  /* max-width: 200px; */
+/* Estilos para la cabecera de la pagina */
+.header {
+  background-color: #009DF5;
 }
 
 .logo {
-  width: 100%;
+  width: 80%;
 }
 
 .title {
-  /* width: 60%; */
-  padding-left: 1em;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .options {
-  /* text-align: right; */
-  /* padding-right: 10px; */
   margin: auto;
 }
 
-/* Estilos para la barra de navegacion */
+.search {
+  flex-flow: nowrap;
+}
 
+/* Estilos para la barra de navegacion */
 .my-nav {
   width: 20%;
-  background-color: #009DF5;
-  /* min-width: 100px; */
-  /* max-width: 200px; */
+  background-color: #15a5f8;
 }
 
 .nav-item a {
   color: #000000;
 }
 
-/* Estilos para el cuerpo de la pagina */
-
-.body {
-  width: 100%;
-  /* display: inline-flex; */
+.nav li:hover{
+  background-color: #0079BD;
 }
 
+/* Estilos para el cuerpo de la pagina */
+
 .article {
-  width: 80%;
   margin-bottom: 20px;
 }
 
@@ -77,6 +85,8 @@ h1 {
   padding-top: 2%;
   padding-bottom: 2%;
   background-color: #0079BD;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 /* Estilos para sola una imagen */
@@ -89,12 +99,6 @@ h1 {
   width: 100%;
   height: auto;
   border: solid;
-}
-
-.actions {
-  display: inline-flex;
-  width: 100%;
-  justify-content: center;
 }
 
 .actions img {
@@ -212,18 +216,9 @@ body { font-family: sans-serif; }
   display: none;
 }
 
-@media screen and (max-width: 64em) {
-  h1 {
-    font-size: 4em;
-  }
-  h2 {
-    font-size: 2em;
-  }
+@media screen and (max-width: 62em) {
   .body {
     display: block;
-  }
-  .title {
-    width: 80%;
   }
   .menu-hidden {
     display: none;
@@ -240,31 +235,20 @@ body { font-family: sans-serif; }
   }
   .article {
     margin-bottom: 0;
-    width: 100%;
   }
 }
 
-@media screen and (max-width: 40em) {
-  h1 {
-    font-size: 2em;
-  }
-  h2 {
-    font-size: 1.5em;
-  }
-  a {
-    font-size: 1.5em;
-  }
-  .title {
-    width: 70%;
-  }
+@media screen and (max-width: 48em) {
   .my-nav {
     display: none;
+    margin-top: 9%;
   }
   .options {
     display: none;
   }
   .body {
     display: block;
+    margin-top: 9%;
   }
   .article {
     margin-bottom: 0;
@@ -272,7 +256,10 @@ body { font-family: sans-serif; }
   }
   .menu-hidden {
     display: block;
-    width: 10%;
-    padding-top: 60px;
+  }
+  .header {
+    position: fixed;
+    top: 0;
+    z-index: 5;
   }
 }
